# saferaise

./: .gitignore  .remarkrc  FUNDING.yml  LICENSE  README.md  cliff.toml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  zensical.toml
.github/workflows/: CI.yaml  quality.yaml  release.yaml
docs/: advanced.md  api.md  how-it-works.md  index.md
docs/examples/: async.md  basic.md  error-boundaries.md  testing.md
src/saferaise/: __init__.py  _decorator.py  _errors.py  _watched_exceptions.py
src/saferaise/_patcher/: __init__.py  _common.py  _hook.py  _parser.py
tests/: conftest.py  test_decorator.py  test_decorator_async.py  test_errors.py  test_integration.py  test_watched_exceptions.py  test_watched_exceptions_async.py
tests/test_patcher/: conftest.py  test_e2e.py  test_hook.py  test_parser.py
