[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "saferaise"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.4",
    "tox>=4.47.3",
    "tox-gh>=1.7.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]


[tool.pyright]
venv = ".venv"
reportAny = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
pythonVersion = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812",
    "ISC003"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S102", "D", "ANN", "PLR2004", "SIM117", "EM101", "TRY003", "F841", "ERA001", "N801"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.13"]

[tool.tox.env_run_base]
description = "run unit tests"
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
dependency_groups = ["test"]

[tool.tox.gh.python]
"3.13" = ["3.13"]

[tool.uv.build-backend]
module-name = "saferaise"
namespace = true