[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "saferaise"
requires-python = "==3.13.*"
dependencies = []
dynamic = ["version", "urls", "readme"]
authors = [
    { name = "Paillat-dev", email = "me@paillat.dev" }
]
description = "Checked exceptions for Python. Declare what your functions raise, and let saferaise enforce it - using your existing try/except blocks."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
keywords = ["exceptions", "checked exceptions", "type checking", "error handling"]
license = "MIT"
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.4",
    "tox>=4.47.3",
    "tox-gh>=1.7.1",
]
docs = [
    "zensical>=0.0.24",
    "mkdocstrings[python]>=1.0.3",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/saferaise/_version.py"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/Paillat-dev/saferaise"
Documentation = "https://paillat.dev/saferaise/"
"Source code" = "https://github.com/Paillat-dev/saferaise/archive/{commit_hash}.zip"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "# saferaise\n"
end-before = "\n## Installation"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "<!-- quick start -->\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/Paillat-dev/saferaise/tree/main\g<2>)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\\?\[!(NOTE|TIP|IMPORTANT|WARNING|CAUTION)\]'
replacement = '**\1**:'

[tool.hatchling]
name = "saferaise"

[tool.hatch.build]
include = [
    "src/saferaise/",
]
exclude = [
    ".github",
    ".python-version",
    "uv.lock",
    "pnpm-lock.yaml",
    "package.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saferaise"]


[tool.pyright]
venv = ".venv"
reportAny = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
pythonVersion = "3.13"
executionEnvironments = [
    { root = "src/saferaise/_version.py", reportDeprecated = false },
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = [
    "src/saferaise/_version.py"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812",
    "ISC003"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S102", "D", "ANN", "PLR2004", "SIM117", "EM101", "TRY003", "F841", "ERA001", "N801"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.13"]

[tool.tox.env_run_base]
description = "run unit tests"
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
dependency_groups = ["test"]

[tool.tox.gh.python]
"3.13" = ["3.13"]

[tool.uv.build-backend]
module-name = "saferaise"
namespace = true
